# Compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sample.tan
LALR(1)/include/: LALR_1.h  LALR_1_DFA.h  LALR_1_grammer.h
LALR(1)/src/: LALR_1.cpp  LALR_1_DFA.cpp  LALR_1_grammer.cpp
LR(1)/include/: LR_1.h  LR_1_DFA.h
LR(1)/src/: LR_1.cpp  LR_1_grammer.cpp
grammar_analysis/include/: LR_1.h  LR_1_grammer.h
grammar_analysis/src/: LR_1.cpp  LR_1_DFA.cpp
input/: grammer.txt  lexicon.txt
lexical_analysis/include/: DFA.h  NFA.h  edge.h  state.h  str.h
lexical_analysis/src/: DFA.cpp  NFA.cpp  edge.cpp  state.cpp  str.cpp
output/: analysis_process.txt  grammer_tree.dot  lex_result.txt
report/: amlnote.sty  note.aux  note.out  note.tex  note.toc
